2012-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/efi/serial.c: Support 1.5 stop bits.

2012-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ext2.c: Experimental support for 64-bit.

2012-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/tftp.c (ack): Fix endianness problem.
	(tftp_receive): Likewise.
	Reported by: Michael Davidsaver.

2012-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* gentpl.py: Make mans depend on grub-mkconfig_lib.

2012-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/list.h (FOR_LIST_ELEMENTS_SAFE): New macro.
	* include/grub/command.h (FOR_COMMANDS_SAFE): Likewise.
	* grub-core/commands/help.c (grub_cmd_help): Use FOR_COMMANDS_SAFE.

2012-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (find_efi_mmap_size): Don't decrease
	efi_mmap_size.
	Reported by: Stuart Hayes.

2012-06-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Add monochrome text support (mda_text, aka `hercules' in grub-legacy).

	* grub-core/Makefile.core.def (mda_text): New module.
	* grub-core/lib/legacy_parse.c (grub_legacy_parse): Support `hercules'.
	* grub-core/term/i386/vga_common.c (grub_console_cur_color): Moved to ..
	* grub-core/term/i386/pc/vga_text.c (cur_color): ... here
	* grub-core/term/i386/pc/console.c (grub_console_cur_color): ... and
	here.
	* grub-core/term/i386/vga_common.c (grub_console_getwh): Moved to ..
	* grub-core/term/i386/pc/vga_text.c (grub_console_getwh): ... here
	* grub-core/term/i386/pc/console.c (grub_console_getwh): ... and
	here.
	* grub-core/term/i386/vga_common.c (grub_console_setcolorstate): Moved
	to ..
	* grub-core/term/i386/pc/vga_text.c (grub_console_setcolorstate):
	... here
	* grub-core/term/i386/pc/console.c (grub_console_setcolorstate): ... and
	here.
	* grub-core/term/i386/vga_common.c: Removed.
	* include/grub/i386/vga_common.h: Likewise.
	* include/grub/vga.h (grub_vga_cr_bw_write): New function.